# traefiktop

./: .gitignore  .goreleaser.release.yml  .release-please-config.json  .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile.prebuilt  Dockerfile.rust  README-rust.md  README.md  fake_build.go  package.json
.github/workflows/: release-pipeline.yml  semantic-release-pipeline.yml  test.yml
src/: api.rs  app.rs  main.rs  main.tsx  service_status.rs  types.rs
src/api/: traefik.ts
src/components/: RoutersList.test.tsx  RoutersList.tsx
src/hooks/: useTraefikData.ts
src/tui/: useTui.ts
tools/: cross-compile.sh  goreleaser.Dockerfile  run-goreleaser.sh
