[package]
name = "traefiktop"
version = "3.0.0"
edition = "2021"
description = "A TUI for visualizing Traefik routing"
authors = ["darksworm (Ilmars Janis Bluzmanis)"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/darksworm/traefiktop"
repository = "https://github.com/darksworm/traefiktop"
readme = "README.md"
keywords = ["traefik", "tui", "terminal-ui", "text-ui", "cli"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "traefiktop"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
